--- a/bookings_cost/index.html
+++ b/bookings_cost/index.html
@@ -15,7 +15,7 @@
         mocha.setup('bdd');
         var assert = chai.assert;
     </script>
-    <!-- greet function -->
+    <!-- bookingCost function -->
     <script src="bookings.js"></script>
     <script src="test/bookings.tests.js"></script>
 
